--- a/paquescolar-web/src/main/webapp/resources/template/topbar.xhtml
+++ b/paquescolar-web/src/main/webapp/resources/template/topbar.xhtml
@@ -9,7 +9,7 @@
     <div class="topbar">
         <div class="pageColumnLeft">
             <h:link styleClass="topbar-logo">
-                <p:graphicImage name="escudo2.png" style="border: 0px;" library="images" />
+                <p:graphicImage name="escudo_rpt.png" style="border: 0px;" library="images" />
             </h:link>
 
             <a href="#" id="menu-button">
