--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurAceptacionPerNat2.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurAceptacionPerNat2.jrxml
@@ -4,6 +4,7 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="pRubro" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -44,21 +45,33 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
-			<staticText>
-				<reportElement uuid="b4e04f70-5052-4537-8b79-19e95b964f34" x="55" y="40" width="457" height="38"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[DECLARACIÓN JURADA SOBRE LA ACEPTACIÓN DE LAS ADJUDICACIONES]]></text>
-			</staticText>
+		<band height="63" splitType="Stretch">
+			<image>
+				<reportElement key="image-1" x="0" y="0" width="60" height="60" uuid="484ea1c2-7c9a-49dd-ac57-1da8aeaa6934"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
+			</image>
+			<image hAlign="Right">
+				<reportElement key="image-2" x="466" y="0" width="106" height="63" uuid="e8fec606-a3d8-4009-9f61-58fcdbde6d0d"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="71" splitType="Stretch">
+		<band height="49" splitType="Stretch">
 			<textField>
-				<reportElement uuid="19876f79-7df9-4794-a033-eb3746e7c7dd" x="22" y="18" width="533" height="42"/>
-				<textElement/>
+				<reportElement x="22" y="7" width="533" height="42" uuid="19876f79-7df9-4794-a033-eb3746e7c7dd"/>
 				<textFieldExpression><![CDATA["DECLARACIÓN JURADA SOBRE LA ACEPTACIÓN DE LAS ADJUDICACIONES QUE LOS CENTROS ESCOLARES REALICEN EN LOS PROCESOS DE COMPRA CORRESPONDIENTES AL RUBRO " + $P{pRubro} + "(AÑO "+$F{anho}+ ")"]]></textFieldExpression>
 			</textField>
 		</band>
@@ -66,7 +79,7 @@
 	<columnHeader>
 		<band height="64" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="bdafee93-0adf-43a4-b29b-4052dc81284b" x="22" y="17" width="533" height="47"/>
+				<reportElement x="22" y="15" width="533" height="47" uuid="bdafee93-0adf-43a4-b29b-4052dc81284b"/>
 				<textElement textAlignment="Justified">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
@@ -94,23 +107,19 @@ $F{direccionRepre} + ", BAJO JURAMENTO HAGO LAS SIGUIENTES DECLARACIONES:  A) Qu
 	<pageFooter>
 		<band height="100" splitType="Stretch">
 			<textField>
-				<reportElement uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8" x="22" y="0" width="512" height="25"/>
-				<textElement/>
+				<reportElement x="22" y="0" width="512" height="25" uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8"/>
 				<textFieldExpression><![CDATA["Nombre de la Persona Proveedora: " + $F{representanteLegal}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63" x="22" y="50" width="437" height="25"/>
-				<textElement/>
+				<reportElement x="22" y="50" width="437" height="25" uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63"/>
 				<textFieldExpression><![CDATA["No DUI: "+$F{duiRepre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9" x="22" y="75" width="437" height="25"/>
-				<textElement/>
+				<reportElement x="22" y="75" width="437" height="25" uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9"/>
 				<textFieldExpression><![CDATA["No NIT: "+$F{nitRepre}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="160cc708-7a0c-43a3-9ace-ea49e159e4ac" x="22" y="25" width="512" height="25"/>
-				<textElement/>
+				<reportElement x="22" y="25" width="512" height="25" uuid="160cc708-7a0c-43a3-9ace-ea49e159e4ac"/>
 				<text><![CDATA[Firma de Persona Proveedora: _____________________________________________]]></text>
 			</staticText>
 		</band>
