--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurCumplimientoPerNat.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurCumplimientoPerNat.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5bd1e5a4-3eba-439a-9219-bc7c1d9d564f">
 	<property name="ireport.zoom" value="1.0000000000000002"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="22"/>
 	<parameter name="ubicacionImagenes" class="java.lang.String"/>
 	<parameter name="pRubro" class="java.lang.String"/>
 	<queryString>
@@ -45,41 +45,33 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
-			<staticText>
-				<reportElement uuid="b4e04f70-5052-4537-8b79-19e95b964f34" x="45" y="30" width="474" height="38"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[DECLARACIÓN JURADA SOBRE EL CUMPLIMIENTO DE LAS ESPECIFICACIONES TÉCNICAS]]></text>
-			</staticText>
-			<image>
-				<reportElement uuid="38802a30-4dfa-432e-8aaa-2cc2bae1be98" key="image-2" x="507" y="0" width="65" height="51"/>
+		<band height="63" splitType="Stretch">
+			<image hAlign="Right">
+				<reportElement key="image-2" x="466" y="0" width="106" height="63" uuid="7ebbf82e-f009-472f-a1f6-4848423b12ad"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<imageExpression><![CDATA[$P{ubicacionImagenes} + File.separator + "logo_mined_rpt.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="fe348e62-610a-4242-909f-78faac6a64c5" key="image-1" x="0" y="0" width="60" height="60"/>
+				<reportElement key="image-1" x="0" y="0" width="60" height="60" uuid="42e4cf28-4753-43a5-b27d-eaac76e03c4a"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<imageExpression><![CDATA[$P{ubicacionImagenes} + File.separator + "escudo.jpg"]]></imageExpression>
+				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="61" splitType="Stretch">
+		<band height="48" splitType="Stretch">
 			<textField>
-				<reportElement uuid="19876f79-7df9-4794-a033-eb3746e7c7dd" x="21" y="19" width="528" height="42"/>
-				<textElement/>
+				<reportElement x="21" y="6" width="528" height="42" uuid="19876f79-7df9-4794-a033-eb3746e7c7dd"/>
 				<textFieldExpression><![CDATA["DECLARACIÓN JURADA GLOBAL SOBRE EL CUMPLIMIENTO DE LAS ESPECIFICACIONES TÉCNICAS PLAZO Y LUGAR DE ENTREGA, DE: "+$P{pRubro}+"\n" +
 "(AÑO "+$F{anho}+ ")"]]></textFieldExpression>
 			</textField>
@@ -88,7 +80,7 @@
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="bdafee93-0adf-43a4-b29b-4052dc81284b" x="21" y="14" width="528" height="47"/>
+				<reportElement x="21" y="14" width="528" height="47" uuid="bdafee93-0adf-43a4-b29b-4052dc81284b"/>
 				<textElement textAlignment="Justified">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
@@ -117,23 +109,19 @@ $F{direccionRepre} + ", BAJO JURAMENTO HAGO LAS SIGUIENTES DECLARACIONES:  A) Qu
 	<pageFooter>
 		<band height="109" splitType="Stretch">
 			<textField>
-				<reportElement uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8" x="21" y="0" width="512" height="25"/>
-				<textElement/>
+				<reportElement x="21" y="0" width="512" height="25" uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8"/>
 				<textFieldExpression><![CDATA["Nombre de la Persona Proveedora: " + $F{representanteLegal}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="160cc708-7a0c-43a3-9ace-ea49e159e4ac" x="21" y="25" width="512" height="25"/>
-				<textElement/>
+				<reportElement x="21" y="25" width="512" height="25" uuid="160cc708-7a0c-43a3-9ace-ea49e159e4ac"/>
 				<text><![CDATA[Firma de Persona Proveedora: _____________________________________________]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63" x="21" y="50" width="437" height="25"/>
-				<textElement/>
+				<reportElement x="21" y="50" width="437" height="25" uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63"/>
 				<textFieldExpression><![CDATA["No DUI: "+$F{duiRepre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9" x="21" y="75" width="437" height="25"/>
-				<textElement/>
+				<reportElement x="21" y="75" width="437" height="25" uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9"/>
 				<textFieldExpression><![CDATA["No NIT: "+$F{nitRepre}]]></textFieldExpression>
 			</textField>
 		</band>
