--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2019LibrosJur.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2019LibrosJur.jrxml
@@ -57,7 +57,9 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String">
 		<defaultValueExpression><![CDATA[".\\"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="ubicacionImagenes" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="P_FECHA_INICIO" class="java.lang.String"/>
 	<parameter name="telDirector" class="java.lang.String"/>
 	<parameter name="descripcionRubro" class="java.lang.String"/>
@@ -112,17 +114,17 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 		<groupHeader>
 			<band height="192" splitType="Stretch">
 				<image>
-					<reportElement uuid="f4a333fc-68e5-4442-8115-87aabaf37082" key="image-1" x="17" y="4" width="60" height="60"/>
+					<reportElement uuid="f4a333fc-68e5-4442-8115-87aabaf37082" key="image-1" x="0" y="0" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.0" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo.jpg"]]></imageExpression>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
-				<image>
-					<reportElement uuid="5aa4cba5-61ed-4dba-b0cd-983efc007a2a" key="image-2" x="420" y="4" width="90" height="57"/>
+				<image hAlign="Right">
+					<reportElement uuid="5aa4cba5-61ed-4dba-b0cd-983efc007a2a" key="image-2" x="362" y="0" width="149" height="63"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
