--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2019LibrosNat.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2019LibrosNat.jrxml
@@ -98,7 +98,9 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String">
 		<defaultValueExpression><![CDATA[".\\"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="ubicacionImagenes" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="P_FECHA_INICIO" class="java.lang.String"/>
 	<parameter name="telDirector" class="java.lang.String"/>
 	<parameter name="descripcionRubro" class="java.lang.String"/>
@@ -147,24 +149,24 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 		<groupHeader>
 			<band height="208" splitType="Stretch">
 				<image onErrorType="Icon">
-					<reportElement uuid="bdcc03d9-40f2-4151-bda8-3cff619e826f" key="image-1" x="17" y="4" width="60" height="60"/>
+					<reportElement uuid="bdcc03d9-40f2-4151-bda8-3cff619e826f" key="image-1" x="1" y="0" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo.jpg"]]></imageExpression>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
-				<image onErrorType="Icon">
-					<reportElement uuid="2fe36ff2-9703-4797-841b-c9366121cc68" key="image-2" x="421" y="4" width="90" height="57"/>
+				<image hAlign="Right" onErrorType="Icon">
+					<reportElement uuid="2fe36ff2-9703-4797-841b-c9366121cc68" key="image-2" x="361" y="0" width="149" height="63"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo.jpg"]]></imageExpression>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 				</image>
 				<textField isBlankWhenNull="false">
 					<reportElement uuid="b8e02fbd-dc6f-4f84-96ff-02f4d4e7a2d9" key="textField-7" x="100" y="8" width="308" height="40"/>
