--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2019Nat.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoUtiles2019Nat.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptContratoPersonaNaturalUtiles" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="7dab6810-11a0-4fbc-b522-9ce09f52dce4">
 	<property name="ireport.zoom" value="2.1435888100000025"/>
-	<property name="ireport.x" value="413"/>
+	<property name="ireport.x" value="262"/>
 	<property name="ireport.y" value="0"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -121,7 +121,9 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String">
 		<defaultValueExpression><![CDATA[".\\"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="ubicacionImagenes" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="P_FECHA_INICIO" class="java.lang.String"/>
 	<parameter name="telDirector" class="java.lang.String"/>
 	<parameter name="descripcionRubro" class="java.lang.String"/>
@@ -170,17 +172,17 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 		<groupHeader>
 			<band height="208" splitType="Stretch">
 				<image onErrorType="Icon">
-					<reportElement uuid="bdcc03d9-40f2-4151-bda8-3cff619e826f" key="image-1" x="17" y="4" width="60" height="60"/>
+					<reportElement uuid="bdcc03d9-40f2-4151-bda8-3cff619e826f" key="image-1" x="0" y="0" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo.jpg"]]></imageExpression>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
-				<image onErrorType="Icon">
-					<reportElement uuid="2fe36ff2-9703-4797-841b-c9366121cc68" key="image-2" x="408" y="4" width="90" height="57"/>
+				<image hAlign="Right" onErrorType="Icon">
+					<reportElement uuid="2fe36ff2-9703-4797-841b-c9366121cc68" key="image-2" x="361" y="0" width="149" height="63"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
