--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoZapato2019Jur.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptContratoZapato2019Jur.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="512" leftMargin="50" rightMargin="50" topMargin="36" bottomMargin="36" uuid="ef8b712b-d116-4f4b-aea0-28889f5df0a2">
-	<property name="ireport.zoom" value="1.464100000000001"/>
-	<property name="ireport.x" value="53"/>
-	<property name="ireport.y" value="144"/>
+	<property name="ireport.zoom" value="1.7715610000000017"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -46,7 +46,9 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 			<variableExpression><![CDATA[$F{SUB_TOTAL}]]></variableExpression>
 		</variable>
 	</subDataset>
-	<parameter name="ubicacionImagenes" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String">
 		<defaultValueExpression><![CDATA[".\\"]]></defaultValueExpression>
 	</parameter>
@@ -274,17 +276,17 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 	<title>
 		<band height="232" splitType="Stretch">
 			<image onErrorType="Blank">
-				<reportElement uuid="15e48afa-2053-44d1-bf1c-de03b2c30a01" key="image-1" x="10" y="4" width="60" height="60"/>
+				<reportElement uuid="15e48afa-2053-44d1-bf1c-de03b2c30a01" key="image-1" x="0" y="0" width="60" height="60"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo.jpg"]]></imageExpression>
+				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
-			<image onErrorType="Blank">
-				<reportElement uuid="0314fcdf-b505-4082-9ceb-db9a13df71f1" key="image-2" x="423" y="4" width="90" height="57"/>
+			<image hAlign="Right" onErrorType="Blank">
+				<reportElement uuid="0314fcdf-b505-4082-9ceb-db9a13df71f1" key="image-2" x="364" y="0" width="149" height="63"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -308,7 +310,7 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 "\"\nFUENTE DE FINANCIAMIENTO: GOES"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement uuid="724910c6-4fed-4edf-873e-0cf9a911140a" key="textField-7" x="93" y="8" width="308" height="35"/>
+				<reportElement uuid="724910c6-4fed-4edf-873e-0cf9a911140a" key="textField-7" x="88" y="8" width="308" height="35"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -316,7 +318,7 @@ ORDER BY TO_NUMBER(NO_ITEM)]]>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="13"/>
+					<font fontName="Arial" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA["CONTRATO No. ME-"+$F{NUMERO_CONTRATO}+"/"+$F{ANHO_CONTRATO}+"/COD:"+$F{CODIGO_ENTIDAD}]]></textFieldExpression>
 			</textField>
