--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionZap2019.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionZap2019.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="544" leftMargin="34" rightMargin="34" topMargin="34" bottomMargin="34" uuid="103cf057-2364-40f0-b590-3a80879be545">
-	<property name="ireport.zoom" value="1.4641000000000017"/>
+	<property name="ireport.zoom" value="1.2100000000000013"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="93"/>
+	<property name="ireport.y" value="19"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -36,7 +36,9 @@
 			<variableExpression><![CDATA[$F{precioUnitario}.multiply(new java.math.BigDecimal($F{cantidad}))]]></variableExpression>
 		</variable>
 	</subDataset>
-	<parameter name="ubicacionImagenes" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="descripcionRubro" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
@@ -77,17 +79,17 @@
 	<group name="reporte">
 		<groupExpression><![CDATA[]]></groupExpression>
 		<groupHeader>
-			<band height="238" splitType="Stretch">
+			<band height="273" splitType="Stretch">
 				<textField>
-					<reportElement uuid="982bf22c-0375-4c4d-a107-2f899a909e36" x="10" y="16" width="524" height="35"/>
+					<reportElement uuid="982bf22c-0375-4c4d-a107-2f899a909e36" x="10" y="55" width="524" height="35"/>
 					<textElement textAlignment="Center" markup="none">
-						<font fontName="Arial" size="12" isBold="true"/>
+						<font fontName="Arial" size="10" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["SOLICITUD DE COTIZACIÓN Y COTIZACIÓN\n"+
  "(RUBRO:  SERVICIOS SUMINISTRO DE ZAPATOS ESCOLARES)"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement uuid="fdae72ee-5ca1-43d1-8d24-15869c832d7f" key="textField-8" x="0" y="53" width="544" height="185"/>
+					<reportElement uuid="fdae72ee-5ca1-43d1-8d24-15869c832d7f" key="textField-8" x="0" y="88" width="544" height="185"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -122,10 +124,30 @@
 .concat("d) Original o copia certificada por notario de Solvencia Municipal y Tributaria (<style isBold='true' pdfFontName='Helvetica-Bold'>aplica para la persona proveedora  natural ó jurídica que en el último año contratado, sus ventas fueron mayores de los $ 5,714.29</style>).\n\n")
 .concat("El no cumplimento de la presentación de los documentos anteriores será motivo para dejar sin efecto la adjudicación.\n\n\n\n\n\n")]]></textFieldExpression>
 				</textField>
+				<image>
+					<reportElement uuid="9f2d25ba-a67a-4b90-8657-c203af6a568c" key="image-1" x="0" y="0" width="60" height="60"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
+				</image>
+				<image hAlign="Right">
+					<reportElement uuid="b108ab0a-f712-44fb-972b-a1b758535958" key="image-2" x="395" y="0" width="149" height="63"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+				</image>
 			</band>
-			<band height="64">
+			<band height="53">
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="23cd71df-d6c0-42cd-9c6c-04de1151a105" x="10" y="0" width="260" height="64"/>
+					<reportElement uuid="23cd71df-d6c0-42cd-9c6c-04de1151a105" x="10" y="0" width="260" height="53"/>
 					<textElement markup="styled">
 						<font fontName="Arial" size="8"/>
 					</textElement>
@@ -134,11 +156,11 @@
 +"\nNombre: "+$F{nombreRepresentanteCe}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="0c1f62b2-6db9-46e7-95ad-d0796f8a0fa2" x="274" y="0" width="246" height="64"/>
+					<reportElement uuid="0c1f62b2-6db9-46e7-95ad-d0796f8a0fa2" x="274" y="0" width="270" height="53"/>
 					<textElement markup="styled">
 						<font fontName="Arial" size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA["\n\n\n\n"
+					<textFieldExpression><![CDATA["\n\n\n"
 +"F. ________________________________"
 +"\nNombre: "+$F{nombreRespresenanteEmp}
 +"\nSello si aplica\n"+
@@ -356,7 +378,7 @@ UNITARIO]]></text>
 			<textField>
 				<reportElement uuid="17abccf8-e63d-4a28-a1b1-3359b4ee3163" x="0" y="30" width="544" height="20"/>
 				<textElement textAlignment="Center" markup="none">
-					<font fontName="Arial" size="12"/>
+					<font fontName="Arial" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA["RUBRO "+$P{descripcionRubro}]]></textFieldExpression>
 			</textField>
