--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurCumplimientoPerNat.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/declaracion/rptDeclaracionJurCumplimientoPerNat.jrxml
@@ -3,7 +3,9 @@
 	<property name="ireport.zoom" value="1.0000000000000002"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="22"/>
-	<parameter name="ubicacionImagenes" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="pRubro" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
@@ -47,7 +49,7 @@
 	<title>
 		<band height="63" splitType="Stretch">
 			<image hAlign="Right">
-				<reportElement key="image-2" x="466" y="0" width="106" height="63" uuid="7ebbf82e-f009-472f-a1f6-4848423b12ad"/>
+				<reportElement uuid="7ebbf82e-f009-472f-a1f6-4848423b12ad" key="image-2" x="423" y="0" width="149" height="63"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -57,7 +59,7 @@
 				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement key="image-1" x="0" y="0" width="60" height="60" uuid="42e4cf28-4753-43a5-b27d-eaac76e03c4a"/>
+				<reportElement uuid="42e4cf28-4753-43a5-b27d-eaac76e03c4a" key="image-1" x="0" y="0" width="60" height="60"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -71,7 +73,8 @@
 	<pageHeader>
 		<band height="48" splitType="Stretch">
 			<textField>
-				<reportElement x="21" y="6" width="528" height="42" uuid="19876f79-7df9-4794-a033-eb3746e7c7dd"/>
+				<reportElement uuid="19876f79-7df9-4794-a033-eb3746e7c7dd" x="21" y="6" width="528" height="42"/>
+				<textElement/>
 				<textFieldExpression><![CDATA["DECLARACIÓN JURADA GLOBAL SOBRE EL CUMPLIMIENTO DE LAS ESPECIFICACIONES TÉCNICAS PLAZO Y LUGAR DE ENTREGA, DE: "+$P{pRubro}+"\n" +
 "(AÑO "+$F{anho}+ ")"]]></textFieldExpression>
 			</textField>
@@ -80,7 +83,7 @@
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="21" y="14" width="528" height="47" uuid="bdafee93-0adf-43a4-b29b-4052dc81284b"/>
+				<reportElement uuid="bdafee93-0adf-43a4-b29b-4052dc81284b" x="21" y="14" width="528" height="47"/>
 				<textElement textAlignment="Justified">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
@@ -109,19 +112,23 @@ $F{direccionRepre} + ", BAJO JURAMENTO HAGO LAS SIGUIENTES DECLARACIONES:  A) Qu
 	<pageFooter>
 		<band height="109" splitType="Stretch">
 			<textField>
-				<reportElement x="21" y="0" width="512" height="25" uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8"/>
+				<reportElement uuid="a9c162c9-9b30-496d-b0e1-b810afdd01c8" x="21" y="0" width="512" height="25"/>
+				<textElement/>
 				<textFieldExpression><![CDATA["Nombre de la Persona Proveedora: " + $F{representanteLegal}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="21" y="25" width="512" height="25" uuid="160cc708-7a0c-43a3-9ace-ea49e159e4ac"/>
+				<reportElement uuid="160cc708-7a0c-43a3-9ace-ea49e159e4ac" x="21" y="25" width="512" height="25"/>
+				<textElement/>
 				<text><![CDATA[Firma de Persona Proveedora: _____________________________________________]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="21" y="50" width="437" height="25" uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63"/>
+				<reportElement uuid="d3cf0a89-512a-498b-9f55-5b3b1582ab63" x="21" y="50" width="437" height="25"/>
+				<textElement/>
 				<textFieldExpression><![CDATA["No DUI: "+$F{duiRepre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="21" y="75" width="437" height="25" uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9"/>
+				<reportElement uuid="c99b2154-eed0-4c3a-a9bf-c0bde0363cc9" x="21" y="75" width="437" height="25"/>
+				<textElement/>
 				<textFieldExpression><![CDATA["No NIT: "+$F{nitRepre}]]></textFieldExpression>
 			</textField>
 		</band>
