--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagares/rptPagareEntregaTela2019.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagares/rptPagareEntregaTela2019.jrxml
@@ -8,7 +8,9 @@
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
-	<parameter name="ubicacionImagenes" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<parameter name="descripcionRubro" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
@@ -79,10 +81,10 @@
 						<bottomPen lineWidth="0.0" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo.jpg"]]></imageExpression>
+					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
-				<image>
-					<reportElement uuid="0e3ed7e4-a098-42e7-b63e-a4654f119e07" key="image-2" x="420" y="0" width="90" height="57"/>
+				<image hAlign="Right">
+					<reportElement uuid="0e3ed7e4-a098-42e7-b63e-a4654f119e07" key="image-2" x="361" y="0" width="149" height="63"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
