--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptFormatoReintegro.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptFormatoReintegro.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a8ea1f80-75bc-46f9-99cd-6308856e4784">
-	<property name="ireport.zoom" value="2.2000000000000113"/>
+	<property name="ireport.zoom" value="0.9330147604194713"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="330"/>
+	<property name="ireport.y" value="48"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -79,7 +79,7 @@ order by
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pEscudo" class="java.lang.String">
-		<defaultValueExpression><![CDATA["/media/misanchez/Datos/svn_paquete_wars/codigo_fuente/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT distinct
@@ -210,8 +210,8 @@ WHERE PP.ESTADO_ELIMINACION = 0 AND
 				<text><![CDATA[Detalle]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="25" y="34" width="47" height="47"/>
-				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo.png"]]></imageExpression>
+				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="21" width="47" height="47"/>
+				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement uuid="5469e2ef-a986-4134-a529-e4b3ba3077d0" x="4" y="120" width="100" height="12"/>
@@ -238,7 +238,7 @@ WHERE PP.ESTADO_ELIMINACION = 0 AND
 				<textFieldExpression><![CDATA[$F{CONCEPTO}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="622" y="46" width="100" height="20"/>
+				<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="652" y="84" width="100" height="12"/>
 				<textElement>
 					<font fontName="Arial" size="7"/>
 				</textElement>
@@ -300,6 +300,16 @@ WHERE PP.ESTADO_ELIMINACION = 0 AND
 				</textElement>
 				<textFieldExpression><![CDATA[Herramientas.aLetras($F{MONTO_CHEQUE})+" DOLARES   ( "+Herramientas.getFormatoMonto($F{MONTO_CHEQUE}) +" )"]]></textFieldExpression>
 			</textField>
+			<image hAlign="Right">
+				<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="603" y="21" width="149" height="63"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+			</image>
 		</band>
 	</pageHeader>
 	<columnHeader>
