--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptMatrizPagoCredito.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptMatrizPagoCredito.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="1008" pageHeight="612" orientation="Landscape" columnWidth="968" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2c64dcb9-cec2-425a-8efd-5083d3230eb2">
-	<property name="ireport.zoom" value="0.9558924531310704"/>
+	<property name="ireport.zoom" value="0.8689931392100642"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="table">
@@ -155,7 +155,7 @@ WHERE
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pEscudo" class="java.lang.String">
-		<defaultValueExpression><![CDATA["/media/misanchez/Datos/svn_paquete_wars/codigo_fuente/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pAFavorDe" class="java.lang.Short">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -554,6 +554,16 @@ WHERE
 	</title>
 	<pageHeader>
 		<band height="181" splitType="Stretch">
+			<image hAlign="Right">
+				<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="819" y="0" width="149" height="63"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+			</image>
 			<staticText>
 				<reportElement uuid="5469e2ef-a986-4134-a529-e4b3ba3077d0" x="13" y="92" width="87" height="12"/>
 				<textElement verticalAlignment="Middle">
@@ -576,8 +586,8 @@ WHERE
 				<textFieldExpression><![CDATA[$F{CONCEPTO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="31" y="6" width="47" height="47"/>
-				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo.png"]]></imageExpression>
+				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="0" width="47" height="47"/>
+				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement uuid="b4bb0369-436d-4c67-995f-90ef56d119c8" x="13" y="107" width="87" height="12"/>
@@ -622,8 +632,8 @@ WHERE
 				<textFieldExpression><![CDATA[$F{FORMATO_REQUERIMIENTO}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="868" y="33" width="100" height="20"/>
-				<textElement>
+				<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="868" y="75" width="100" height="12"/>
+				<textElement textAlignment="Right">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
@@ -636,7 +646,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{FUENTE_FINANCIAMIENTO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="3f03c02e-8461-4bc8-b319-45ac0a64ebd2" x="81" y="-7" width="805" height="86"/>
+				<reportElement uuid="3f03c02e-8461-4bc8-b319-45ac0a64ebd2" x="81" y="0" width="805" height="79"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font fontName="Arial" size="10"/>
 				</textElement>
@@ -674,7 +684,7 @@ WHERE
 				<text><![CDATA[FECHA EMISIÓN:]]></text>
 			</staticText>
 			<textField pattern="###0">
-				<reportElement uuid="a40d0bb2-a4c4-4c32-8321-1dcada6e2c63" x="868" y="13" width="100" height="20"/>
+				<reportElement uuid="a40d0bb2-a4c4-4c32-8321-1dcada6e2c63" x="868" y="63" width="100" height="12"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="7"/>
 				</textElement>
