--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptRequerimientoFondos.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptRequerimientoFondos.jrxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="667ad911-1d32-4dc9-b4f6-f3676bdbab2f">
-	<property name="ireport.zoom" value="2.0"/>
+	<property name="ireport.zoom" value="1.5026296018031553"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="51"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="pDepartamental" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["SAN MIGUEL"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pEscudo" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["C:\\Users\\MISanchez\\Documents\\NetBeansProjects\\paquete\\paquescolar-web\\src\\main\\webapp\\resources\\images"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pUniforme" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -81,7 +81,7 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 	<pageHeader>
 		<band height="132" splitType="Stretch">
 			<textField>
-				<reportElement x="40" y="0" width="496" height="44" uuid="8b6881fa-9b39-4e73-ad7b-8136abdf7006"/>
+				<reportElement uuid="8b6881fa-9b39-4e73-ad7b-8136abdf7006" x="17" y="0" width="496" height="44"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="10" isBold="true"/>
 					<paragraph lineSpacing="Proportional" lineSpacingSize="1.3"/>
@@ -91,74 +91,74 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 "PAGADURÍA AUXILIAR DEPARTAMENTAL"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="40" y="44" width="496" height="15" uuid="47f6b448-aa5d-46d7-9cb6-593b23d762e9"/>
+				<reportElement uuid="47f6b448-aa5d-46d7-9cb6-593b23d762e9" x="8" y="44" width="496" height="15"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="10"/>
 				</textElement>
 				<text><![CDATA[SOPORTE DE REQUERIMIENTO DE TRANSFERENCIA DE FONDOS]]></text>
 			</staticText>
 			<image>
-				<reportElement x="10" y="0" width="60" height="60" uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf"/>
+				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="0" width="60" height="60"/>
 				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="40" y="76" width="91" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="40" y="76" width="91" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<text><![CDATA[REQUERIMIENTO:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="40" y="92" width="88" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="40" y="92" width="88" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<text><![CDATA[COMPONENTE   :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="40" y="118" width="88" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="40" y="118" width="88" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<text><![CDATA[FUENTE       :]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="131" y="76" width="119" height="11" uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c"/>
+				<reportElement uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c" x="131" y="76" width="119" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NUMERO_REQUERIMIENTO}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="131" y="92" width="403" height="22" uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c"/>
+				<reportElement uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c" x="131" y="92" width="403" height="22"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DESCRIPCION_REQUERIMIENTO}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="131" y="118" width="72" height="11" uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c"/>
+				<reportElement uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c" x="131" y="118" width="72" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{FUENTE_FINANCIAMIENTO}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="260" y="60" width="59" height="11" uuid="244b42d1-89a0-445e-a95f-4be5f24ba3aa"/>
+				<reportElement uuid="244b42d1-89a0-445e-a95f-4be5f24ba3aa" x="260" y="60" width="59" height="11"/>
 				<textElement>
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{FECHA_ELABORACION}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement x="486" y="76" width="48" height="16" uuid="244b42d1-89a0-445e-a95f-4be5f24ba3aa"/>
+				<reportElement uuid="244b42d1-89a0-445e-a95f-4be5f24ba3aa" x="486" y="76" width="48" height="16"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="11" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[String.format("%03d", $F{CORRELATIVO_GENERAL}.intValue())]]></textFieldExpression>
 			</textField>
 			<image hAlign="Right">
-				<reportElement key="image-2" x="460" y="0" width="112" height="63" uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295"/>
+				<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="423" y="0" width="149" height="63"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -172,54 +172,54 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="40" y="0" width="30" height="14" uuid="60379484-0ba1-42d4-a5bb-7a147990c9a4"/>
+				<reportElement uuid="60379484-0ba1-42d4-a5bb-7a147990c9a4" x="40" y="0" width="30" height="14"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<text><![CDATA[Código]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="70" y="0" width="390" height="14" uuid="2b01a170-7928-46dd-8edd-c7f2dfa2db9a"/>
+				<reportElement uuid="2b01a170-7928-46dd-8edd-c7f2dfa2db9a" x="70" y="0" width="390" height="14"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<text><![CDATA[Nombre de la Modalidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="464" y="0" width="72" height="14" uuid="84a10d41-bbe1-4d0f-9bf0-36aecbc1dd96"/>
+				<reportElement uuid="84a10d41-bbe1-4d0f-9bf0-36aecbc1dd96" x="464" y="0" width="72" height="14"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<text><![CDATA[Monto $]]></text>
 			</staticText>
 			<line>
-				<reportElement x="40" y="0" width="496" height="1" uuid="6e859ae6-090e-41f7-b043-9043bdc038b8"/>
+				<reportElement uuid="6e859ae6-090e-41f7-b043-9043bdc038b8" x="40" y="0" width="496" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement x="40" y="14" width="496" height="1" uuid="6e859ae6-090e-41f7-b043-9043bdc038b8"/>
+				<reportElement uuid="6e859ae6-090e-41f7-b043-9043bdc038b8" x="40" y="14" width="496" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement x="40" y="15" width="34" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="40" y="15" width="34" height="11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7" isBold="true"/>
 				</textElement>
 				<text><![CDATA[LINEA :]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="74" y="15" width="462" height="11" uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c"/>
+				<reportElement uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c" x="74" y="15" width="462" height="11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{LINEA_TRABAJO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="421" y="1" width="39" height="13" uuid="04c09863-0ee2-4f02-8b78-585902c949ec"/>
+				<reportElement uuid="04c09863-0ee2-4f02-8b78-585902c949ec" x="421" y="1" width="39" height="13"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
@@ -230,28 +230,28 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 	<detail>
 		<band height="16" splitType="Stretch">
 			<textField>
-				<reportElement x="40" y="1" width="30" height="14" uuid="7cfaf22d-a9c0-4de6-ad70-41b9c2187937"/>
+				<reportElement uuid="7cfaf22d-a9c0-4de6-ad70-41b9c2187937" x="40" y="1" width="30" height="14"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{CODIGO_ENTIDAD}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="70" y="1" width="324" height="14" uuid="c90fb3da-50bc-4b92-b709-7fc182cb1d88"/>
+				<reportElement uuid="c90fb3da-50bc-4b92-b709-7fc182cb1d88" x="70" y="1" width="324" height="14"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NOMBRE}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00">
-				<reportElement x="464" y="1" width="72" height="14" uuid="e38f5117-0efe-4f67-82d8-7278d1786277"/>
+				<reportElement uuid="e38f5117-0efe-4f67-82d8-7278d1786277" x="464" y="1" width="72" height="14"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{TOTAL}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="421" y="1" width="39" height="14" uuid="a9d62ae6-2670-4dae-8748-fdcada3da97c"/>
+				<reportElement uuid="a9d62ae6-2670-4dae-8748-fdcada3da97c" x="421" y="1" width="39" height="14"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
@@ -265,34 +265,34 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 	<pageFooter>
 		<band height="16" splitType="Stretch">
 			<line>
-				<reportElement x="40" y="0" width="496" height="1" uuid="6e859ae6-090e-41f7-b043-9043bdc038b8"/>
+				<reportElement uuid="6e859ae6-090e-41f7-b043-9043bdc038b8" x="40" y="0" width="496" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement x="251" y="4" width="18" height="11" uuid="60379484-0ba1-42d4-a5bb-7a147990c9a4"/>
+				<reportElement uuid="60379484-0ba1-42d4-a5bb-7a147990c9a4" x="251" y="4" width="18" height="11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<text><![CDATA[Pag.]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="269" y="4" width="20" height="11" uuid="9ab36441-0ff9-48a3-a66e-d6adc963f74a"/>
+				<reportElement uuid="9ab36441-0ff9-48a3-a66e-d6adc963f74a" x="269" y="4" width="20" height="11"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="289" y="4" width="18" height="11" uuid="60379484-0ba1-42d4-a5bb-7a147990c9a4"/>
+				<reportElement uuid="60379484-0ba1-42d4-a5bb-7a147990c9a4" x="289" y="4" width="18" height="11"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
 				<text><![CDATA[de]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="307" y="4" width="20" height="11" uuid="ae229b06-bc9f-48a9-9be1-2595271bb0b6"/>
+				<reportElement uuid="ae229b06-bc9f-48a9-9be1-2595271bb0b6" x="307" y="4" width="20" height="11"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="7"/>
 				</textElement>
@@ -303,68 +303,68 @@ ORDER BY DET.CODIGO_ENTIDAD]]>
 	<summary>
 		<band height="117" splitType="Stretch">
 			<rectangle>
-				<reportElement x="460" y="3" width="75" height="13" uuid="7e797b3e-3cdb-49e9-be70-498cfff40908"/>
+				<reportElement uuid="7e797b3e-3cdb-49e9-be70-498cfff40908" x="460" y="3" width="75" height="13"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="301" y="3" width="75" height="13" uuid="7e797b3e-3cdb-49e9-be70-498cfff40908"/>
+				<reportElement uuid="7e797b3e-3cdb-49e9-be70-498cfff40908" x="301" y="3" width="75" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="27" y="91" width="193" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="27" y="91" width="193" height="11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<text><![CDATA[ORDENADOR(A) DE PAGOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="40" y="4" width="259" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="40" y="4" width="259" height="11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<text><![CDATA[Total por componente:		No. de modalidades:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" pattern="#,##0">
-				<reportElement x="301" y="4" width="73" height="11" uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c"/>
+				<reportElement uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c" x="301" y="4" width="73" height="11"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="8" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{vNumeroCe}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="27" y="102" width="193" height="13" uuid="38dbc865-7afc-4216-842a-d10bcb6cfc7b"/>
+				<reportElement uuid="38dbc865-7afc-4216-842a-d10bcb6cfc7b" x="27" y="102" width="193" height="13"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DIRECTOR_DEPARTAMENTAL}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="297" y="102" width="193" height="13" uuid="38dbc865-7afc-4216-842a-d10bcb6cfc7b"/>
+				<reportElement uuid="38dbc865-7afc-4216-842a-d10bcb6cfc7b" x="297" y="102" width="193" height="13"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{PAGADOR_DEPARTAMENTAL}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="297" y="92" width="193" height="11" uuid="a1e561db-79d6-4412-83b2-5e45ff64401a"/>
+				<reportElement uuid="a1e561db-79d6-4412-83b2-5e45ff64401a" x="297" y="92" width="193" height="11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<text><![CDATA[PAGADOR(A) AUXILIAR]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" pattern="$ #,##0.00">
-				<reportElement x="461" y="4" width="73" height="11" uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c"/>
+				<reportElement uuid="b97efb02-f421-4724-bb9e-2a64cd51ba7c" x="461" y="4" width="73" height="11"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="8" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{vTotalRequerimiento}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="27" y="89" width="193" height="1" uuid="6e859ae6-090e-41f7-b043-9043bdc038b8"/>
+				<reportElement uuid="6e859ae6-090e-41f7-b043-9043bdc038b8" x="27" y="89" width="193" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement x="297" y="90" width="193" height="1" uuid="6e859ae6-090e-41f7-b043-9043bdc038b8"/>
+				<reportElement uuid="6e859ae6-090e-41f7-b043-9043bdc038b8" x="297" y="90" width="193" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
