--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptTransferenciaCheque.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptTransferenciaCheque.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a8ea1f80-75bc-46f9-99cd-6308856e4784">
-	<property name="ireport.zoom" value="1.1000000000000025"/>
+	<property name="ireport.zoom" value="1.0000000000000022"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="table">
@@ -83,7 +83,7 @@ order by
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pEscudo" class="java.lang.String">
-		<defaultValueExpression><![CDATA["/media/misanchez/Datos/svn_paquete_wars/codigo_fuente/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT 
@@ -114,7 +114,7 @@ GROUP BY
 		<groupHeader>
 			<band height="183">
 				<image>
-					<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="37" y="25" width="47" height="47"/>
+					<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="12" width="47" height="47"/>
 					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo.png"]]></imageExpression>
 				</image>
 				<staticText>
@@ -199,19 +199,29 @@ GROUP BY
 Herramientas.getFormatoMonto($F{MONTO})]]></textFieldExpression>
 				</textField>
 				<textField pattern="dd/MM/yyyy">
-					<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="634" y="37" width="100" height="20"/>
-					<textElement>
+					<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="652" y="87" width="100" height="12"/>
+					<textElement textAlignment="Right">
 						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0">
-					<reportElement uuid="a40d0bb2-a4c4-4c32-8321-1dcada6e2c63" x="634" y="17" width="100" height="20"/>
+					<reportElement uuid="a40d0bb2-a4c4-4c32-8321-1dcada6e2c63" x="652" y="75" width="100" height="12"/>
 					<textElement textAlignment="Right">
 						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{ID_PLANILLA}]]></textFieldExpression>
 				</textField>
+				<image hAlign="Right">
+					<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="603" y="12" width="149" height="63"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+				</image>
 			</band>
 		</groupHeader>
 		<groupFooter>
