--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptTransferenciaCrediCheque.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptTransferenciaCrediCheque.jrxml
@@ -83,7 +83,7 @@ order by
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pEscudo" class="java.lang.String">
-		<defaultValueExpression><![CDATA["/media/misanchez/Datos/svn_paquete_wars/codigo_fuente/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pAFavorDe" class="java.lang.Short">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -130,8 +130,8 @@ GROUP BY
 		<groupHeader>
 			<band height="210">
 				<image>
-					<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="37" y="25" width="47" height="47"/>
-					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo.png"]]></imageExpression>
+					<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="12" width="47" height="47"/>
+					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
 				<staticText>
 					<reportElement uuid="5469e2ef-a986-4134-a529-e4b3ba3077d0" x="16" y="111" width="100" height="12"/>
@@ -235,8 +235,8 @@ GROUP BY
 					<textFieldExpression><![CDATA[$F{FECHA_CHEQUE}]]></textFieldExpression>
 				</textField>
 				<textField pattern="dd/MM/yyyy">
-					<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="627" y="36" width="100" height="20"/>
-					<textElement>
+					<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="652" y="87" width="100" height="12"/>
+					<textElement textAlignment="Right">
 						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
@@ -249,12 +249,22 @@ GROUP BY
 					<textFieldExpression><![CDATA[Herramientas.aLetras($F{MONTO})+" DOLARES   ( "+Herramientas.getFormatoMonto($F{MONTO}) +" )"]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0">
-					<reportElement uuid="31a8ee43-19ae-437a-b803-b44ab168da39" x="627" y="12" width="100" height="13"/>
+					<reportElement uuid="31a8ee43-19ae-437a-b803-b44ab168da39" x="652" y="75" width="100" height="12"/>
 					<textElement textAlignment="Right">
 						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{ID_PLANILLA}]]></textFieldExpression>
 				</textField>
+				<image hAlign="Right">
+					<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="603" y="12" width="149" height="63"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+				</image>
 			</band>
 		</groupHeader>
 		<groupFooter>
