--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptTransferenciaRenta.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptTransferenciaRenta.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a8ea1f80-75bc-46f9-99cd-6308856e4784">
 	<property name="ireport.zoom" value="1.2100000000000033"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="66"/>
 	<property name="ireport.y" value="0"/>
 	<style name="table">
 		<box>
@@ -78,7 +78,7 @@ order by
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pEscudo" class="java.lang.String">
-		<defaultValueExpression><![CDATA["/media/misanchez/Datos/svn_paquete_wars/codigo_fuente/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT 
@@ -129,8 +129,8 @@ GROUP BY
 					</graphicElement>
 				</rectangle>
 				<image>
-					<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="37" y="25" width="47" height="47"/>
-					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo.png"]]></imageExpression>
+					<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="12" width="47" height="47"/>
+					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 				</image>
 				<staticText>
 					<reportElement uuid="5469e2ef-a986-4134-a529-e4b3ba3077d0" x="16" y="111" width="100" height="12"/>
@@ -214,8 +214,8 @@ GROUP BY
 Herramientas.getFormatoMonto($F{MONTO})]]></textFieldExpression>
 				</textField>
 				<textField pattern="dd/MM/yyyy">
-					<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="634" y="37" width="100" height="20"/>
-					<textElement>
+					<reportElement uuid="c4eb7907-4798-48e4-918b-c8ce887663dc" x="652" y="75" width="100" height="12"/>
+					<textElement textAlignment="Right">
 						<font fontName="Arial" size="7"/>
 					</textElement>
 					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
@@ -294,6 +294,16 @@ Herramientas.getFormatoMonto($F{MONTO})]]></textFieldExpression>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{NUMERO_CHEQUE}]]></textFieldExpression>
 				</textField>
+				<image hAlign="Right">
+					<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="603" y="12" width="149" height="63"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+				</image>
 			</band>
 		</groupHeader>
 		<groupFooter>
