--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagares/rptPagareCumplimientoContrato2019.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagares/rptPagareCumplimientoContrato2019.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="19"/>
+	<property name="ireport.y" value="0"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -121,7 +121,7 @@ concat("asimismo faculto al Organismo de Administración Escolar que administra 
 concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="false">
-					<reportElement uuid="03f9a77f-a671-4cab-81fb-ad9cf8c200d9" key="textField-6" x="78" y="15" width="342" height="56"/>
+					<reportElement uuid="03f9a77f-a671-4cab-81fb-ad9cf8c200d9" key="textField-6" x="76" y="1" width="342" height="56"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -131,7 +131,7 @@ concat("que se embarguen, a quien relevo de la obligación de rendir fianza.")]]
 					<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 						<font fontName="Arial" size="12"/>
 					</textElement>
-					<textFieldExpression><![CDATA["<style isBold='true' pdfFontName='Helvetica-Bold'>PAGARÉ SIN PROTESTO\n(PARA GARANTÍA DE CUMPLIMIENTO DEL CONTRATO)</style>"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["<style isBold='true' pdfFontName='Helvetica-Bold'>PAGARÉ SIN PROTESTO\n(PARA GARANTÍA DE\nCUMPLIMIENTO DEL CONTRATO)</style>"]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
