--- a/paquescolar-web/src/main/webapp/resources/css/personalizadas.css
+++ b/paquescolar-web/src/main/webapp/resources/css/personalizadas.css
@@ -122,23 +122,7 @@ a.secciones.active,a.secciones:focus,a.secciones:hover{
     background: #fc6e2b !important;
 }
 
-body .ui-inputfield {
-    color: #757575;
-    background: #ffffff;
-    padding: 5px;
-    border: 1px solid #bdc3c9;
-    -moz-transition: border-color 0.3s;
-    -o-transition: border-color 0.3s;
-    -webkit-transition: border-color 0.3s;
-    transition: border-color 0.3s;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    font-size: 12px;
-}
+
 
 .ui-picklist .ui-picklist-list {
     list-style-type: none;
@@ -267,3 +251,35 @@ body .ui-widget-overlay {
 .col2_label{width: 16.67%;text-align: right;}
 .col1{width: 8.33%;}
 .col1_label{width: 8.33%;text-align: right;}
+
+.divSticky{
+    position: sticky !important;
+    position: -webkit-sticky !important; 
+    top: 71px; 
+    z-index: 250; 
+}
+.divStickySombra{
+    -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+}
+
+
+.divSticky.scrolled {
+  background-color: #fff !important;
+  transition: background-color 200ms linear;
+}
+
+.divStickyOAE{
+    position: sticky;
+    position: -webkit-sticky !important; 
+    top: 235px; 
+    z-index: 1000; 
+    -webkit-box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
+}
+
+body .ui-datatable .ui-datatable-data > tr td {
+    padding: 2px 12px !important;
+}
