--- a/paquescolar-web/src/main/webapp/resources/template/template.xhtml
+++ b/paquescolar-web/src/main/webapp/resources/template/template.xhtml
@@ -135,7 +135,7 @@
 
 
         <div class="layout-wrapper #{guestPreferences.slimMenu ? 'layout-menu-slim' : (guestPreferences.overlayMenu ? 'layout-menu-overlay' : 'layout-menu-static')}">
-            <p:growl id="growl" showDetail="true" escape="false">
+            <p:growl id="growl" showDetail="true" escape="false" sticky="true" >
                 <p:autoUpdate />
             </p:growl>
             <h:form id="frmTopBar">
